# learn-ai-backend-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
src/: faces.rs  main.rs
