[package]
name = "learn-ai-backend-rs"
version = "0.1.0"
authors = ["Blake Wyatt <blakewy@live.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }